--- a/index.html
+++ b/index.html
@@ -19,81 +19,83 @@
     <!-- Personal Styling sheet -->
     <link rel="stylesheet" href="css/styles.css">
 </head>
-<body class="container-sm">
-    <div class="display-screen">
-        <div class="row">
-            <div class="col">
-                asdas
+<body>
+    <div class="container">
+        <div class="display-screen">
+            <div class="row">
+                <div class="col">
+                    asdas
+                </div>
             </div>
         </div>
-    </div>
-    <div id="buttons">
-        <div class="row">
-            <div class="col">
-                <button role="button" class="btn btn-light btn-block">7</button>
+        <div id="buttons">
+            <div class="row">
+                <div class="col">
+                    <button role="button" class="btn btn-light btn-block">7</button>
+                </div>
+                <div class="col">
+                    <button role="button" class="btn btn-light">8</button>
+                </div>
+                <div class="col">
+                    <button role="button" class="btn btn-light">9</button>
+                </div>
+                <div class="col">
+                    <button role="button" class="btn btn-primary">DEL</button>
+                </div>
+                <div class="col">
+                    <button role="button" class="btn btn-primary">AC</button>
+                </div>
             </div>
-            <div class="col">
-                <button role="button" class="btn btn-light">8</button>
+            <div class="row">
+                <div class="col">
+                    <button role="button" class="btn btn-light">4</button>
+                </div>
+                <div class="col">
+                    <button role="button" class="btn btn-light">5</button>
+                </div>
+                <div class="col">
+                    <button role="button" class="btn btn-light">6</button>
+                </div>
+                <div class="col">
+                    <button role="button" class="btn btn-light">X</button>
+                </div>
+                <div class="col">
+                    <button role="button" class="btn btn-light">÷</button>
+                </div>
             </div>
-            <div class="col">
-                <button role="button" class="btn btn-light">9</button>
+            <div class="row">
+                <div class="col">
+                    <button role="button" class="btn btn-light">1</button>
+                </div>
+                <div class="col">
+                    <button role="button" class="btn btn-light">2</button>
+                </div>
+                <div class="col">
+                    <button role="button" class="btn btn-light">3</button>
+                </div>
+                <div class="col">
+                    <button role="button" class="btn btn-light">+</button>
+                </div>
+                <div class="col">
+                    <button role="button" class="btn btn-light">-</button>
+                </div>
             </div>
-            <div class="col">
-                <button role="button" class="btn btn-primary">DEL</button>
-            </div>
-            <div class="col">
-                <button role="button" class="btn btn-primary">AC</button>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <button role="button" class="btn btn-light">4</button>
-            </div>
-            <div class="col">
-                <button role="button" class="btn btn-light">5</button>
-            </div>
-            <div class="col">
-                <button role="button" class="btn btn-light">6</button>
-            </div>
-            <div class="col">
-                <button role="button" class="btn btn-light">X</button>
-            </div>
-            <div class="col">
-                <button role="button" class="btn btn-light">÷</button>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <button role="button" class="btn btn-light">1</button>
-            </div>
-            <div class="col">
-                <button role="button" class="btn btn-light">2</button>
-            </div>
-            <div class="col">
-                <button role="button" class="btn btn-light">3</button>
-            </div>
-            <div class="col">
-                <button role="button" class="btn btn-light">+</button>
-            </div>
-            <div class="col">
-                <button role="button" class="btn btn-light">-</button>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <button role="button" class="btn btn-light">0</button>
-            </div>
-            <div class="col">
-                <button role="button" class="btn btn-light">.</button>
-            </div>
-            <div class="col">
-                <button role="button" class="btn btn-light">x10<sup>x</sup></button>
-            </div>
-            <div class="col">
-                <button role="button" class="btn btn-light">+</button>
-            </div>
-            <div class="col">
-                <button role="button" class="btn btn-light">-</button>
+            <div class="row">
+                <div class="col">
+                    <button role="button" class="btn btn-light">0</button>
+                </div>
+                <div class="col">
+                    <button role="button" class="btn btn-light">.</button>
+                </div>
+                <div class="col">
+                    <button role="button" class="btn btn-light">x10<sup>x</sup></button>
+                </div>
+                <div class="col">
+                    <button role="button" class="btn btn-light">+</button>
+                </div>
+                <div class="col">
+                    <button role="button" class="btn btn-light">-</button>
+                </div>
             </div>
         </div>
     </div>
